--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://hugo-profile.netlify.app"
+baseURL: "https://Matteo1752.github.io"
 languageCode: "fr-fr"
 title: "Matteo profile"
 theme: hugo-profile
