--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "themes/hugp-profile/"]
+[submodule "themes/hugo-profile/"]
 	path = "themes/hugo-profile
 	url = https://github.com/gurusabarish/hugo-profile.git
 
