--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,9 @@ outputs:
     - "HTML"
     - "RSS"
 
-Paginate: 3
+pagination:
+  pagerSize: 30
+
 enableRobotsTXT: true
 # disqusShortname: your-disqus-shortname
 # googleAnalytics: G-MEASUREMENT_ID
@@ -110,7 +112,7 @@ params:
       showOnScrollUp : true
     menus:
       disableAbout: false
-      disableExperience: false
+      disableExperience: true
       disableEducation: false
       disableProjects: false
       disableAchievements: false
@@ -161,32 +163,29 @@ params:
     enable: true
     title: "Expériences professionelles"
     items:
-      - job: ""
+      - job: "Apprenti"
         company: "Forges de Bologne"
         companyUrl: "https://example.com"
         date: "20 Mars 2023 - 14 Avril 2023 et 21 Novembre 2023-8 Decembre 2023"
         featuredLink:
           enable: false
-          name: "View the project"
           url: "https://example.com"
         content: "Stage réalisé en Terminal bac pro lors de mes deux période de stage"
-
-      - job: ""
+      - job: "Apprenti"
         company: "Conseil départemental Chaumont"
         companyUrl: "https://example.com"
         date: "17 janvier 2022 au 4 Février 2022 et 30 Mai 2022 au 8 Juillet 2022"
         featuredLink:
-        enable: false
-        url: "https://example.com"
+          enable: false
+          url: "https://example.com"
         content: "Stage réalisé en premiere bac pro lors de mes deux periodes de stage"
-      - job: ""
+      - job: "Apprenti"
         company: "Hopital de Chaumont"
         companyUrl: "https://example.com"
         date: "27 mai au 28 juin"
         featuredLink:
-        enable: false
-        name: "View the project"
-        url: "https://example.com"
+          enable: false
+          url: "https://example.com"
         content: "Stage réalisé lors de ma première année de BTS SIO"
 
 
